fix-overflow

--- a/style.css
+++ b/style.css
@@ -169,6 +169,10 @@ p {
 }
 
 @media(max-width:700px){
+    html, body {
+        overflow-x: hidden;
+    }
+    
     .text-box h1 {
         font-size: 24px;
     }
